Se realizo la creacion de api, migracion del modelo la creacion de la base de datos

--- a/env/pyvenv.cfg
+++ b/env/pyvenv.cfg
@@ -1,5 +1,8 @@
-home = /opt/homebrew/opt/python@3.12/bin
+home = C:\Users\Diego\AppData\Local\Programs\Python\Python312
+implementation = CPython
+version_info = 3.12.3.final.0
+virtualenv = 20.26.1
 include-system-site-packages = false
-version = 3.12.2
-executable = /opt/homebrew/Cellar/python@3.12/3.12.2_1/Frameworks/Python.framework/Versions/3.12/bin/python3.12
-command = /opt/homebrew/opt/python@3.12/bin/python3.12 -m venv /Users/juanwalteros/Desktop/ProyectoTravel/env
+base-prefix = C:\Users\Diego\AppData\Local\Programs\Python\Python312
+base-exec-prefix = C:\Users\Diego\AppData\Local\Programs\Python\Python312
+base-executable = C:\Users\Diego\AppData\Local\Programs\Python\Python312\python.exe
